err/ia870.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ia870'...
Compiling './lib/python3.5/site-packages/ia870/iablob.py'...
***   File "./lib/python3.5/site-packages/ia870/iablob.py", line 108
    print "Measurement option should be 'AREA','CENTROID', 'BOUNDINGBOX', 'PERIMETER', "
                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ia870/iadrawv.py'...
***   File "./lib/python3.5/site-packages/ia870/iadrawv.py", line 19
    print 'Number of points must match n. of colors.'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ia870/iagrain.py'...
***   File "./lib/python3.5/site-packages/ia870/iagrain.py", line 43
    print "'STD1' is not implemented"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ia870/iaopentransf.py'...
***   File "./lib/python3.5/site-packages/ia870/iaopentransf.py", line 46
    print 'Error: only accepts OCTAGON, CHESSBOARD, CITY-BLOCK, LINEAR-H, LINEAR-V, LINEAR-45R, LINEAR-45L, or USER as type, or with suffix -REC.'
                                                                                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ia870/iaseintersec.py'...
***   File "./lib/python3.5/site-packages/ia870/iaseintersec.py", line 17
    if B1.shape <> B2.shape:
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia870/iaseshow.py'...
***   File "./lib/python3.5/site-packages/ia870/iaseshow.py", line 29
    print 'iaseshow: not a valid flag: NORMAL, EXPAND or NON-FLAT'
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ia870/iaset2mat.py'...
***   File "./lib/python3.5/site-packages/ia870/iaset2mat.py", line 17
    raise TypeError, 'Argument must be a tuple of length 1 or 2'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia870/iaseunion.py'...
***   File "./lib/python3.5/site-packages/ia870/iaseunion.py", line 10
    print 'B1=',B1
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ia870/iaskelm.py'...
***   File "./lib/python3.5/site-packages/ia870/iaskelm.py", line 26
    print f
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ia870-0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
